Update PHP links to HTML

--- a/links.html
+++ b/links.html
@@ -77,17 +77,17 @@
 <div class="navigation"><img src="images/foto.jpg" alt="head2" />
     <br /><h2>Pessoal</h2>
     <ul>
-        <li><a href="index.php">Boas Vindas</a></li>
-        <li><a href="bio.php">Dados Biográficos</a></li>
-        <li><a href="mministerial.php">Marcos Ministeriais</a></li>
-        <li><a href="contactos.php">Contactos</a></li>
+        <li><a href="index.html">Boas Vindas</a></li>
+        <li><a href="bio.html">Dados Biográficos</a></li>
+        <li><a href="mministerial.html">Marcos Ministeriais</a></li>
+        <li><a href="contactos.html">Contactos</a></li>
     </ul>
     
     <h2>Partilha</h2>
     <ul>
-        <li><a href="artigos.php">Artigos</a></li>
-        <li><a href="livros.php">Livros</a></li>
-        <li><a href="links.php">Ligações</a></li>
+        <li><a href="artigos.html">Artigos</a></li>
+        <li><a href="livros.html">Livros</a></li>
+        <li><a href="links.html">Ligações</a></li>
     </ul>
 
     <br/>
